force-app/main/default/objects/MostPublishedBooks__e/MostPublishedBooks__e.object-meta.xml
<CustomObject>
    <label>Most Published Books</label>
    <pluralLabel>Most Published Books</pluralLabel>
</CustomObject>