force-app/main/default/objects/MostPublishedBooks__e/fields/Bookswithpublishernames__c.field-meta.xml
<CustomField>
    <fullName>Bookswithpublishernames__c</fullName>
    <label>Bookswithpublishernames</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>