force-app/main/default/objects/MostPublishedBooks__e/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <label>Edition</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>